<resources>
    <string name="app_name">Reminder</string>
    <string name="save_button_txt">Save</string>
    <string name="dialog_title">Working in item...</string>
    <string name="close_button_txt">Close</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_item_title">Exit ?</string>
    <string name="close_record">Close Record</string>
    <string name="open_record">Open Record</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="all_count_todo">All ToDo : </string>
    <string name="done_todo">Done ToDo : </string>
    <string name="todo_setalarm">Set Alarm</string>

    <string name="menu_settings">Settings</string>
    <string name="ringtone_setting_str">Ringtone</string>
    <string name="fab_add_item">Add a note</string>
    <string name="fab_add_todo">Add To Do List</string>
    <string name="todo_menu_edit">Edit</string>
    <string name="todo_menu_done">Done</string>
    <string name="security_key">Security key:</string>
    <string name="dialog_title_warning">Attention !!!</string>
    <string name="dialog_store_msg">Are you sure you want to exit without saving?</string>
    <string name="dialog_title_add_work">Add task</string>
    <string name="select_item_edit">Edit</string>
    <string name="select_item_send_email">Send to mail</string>
    <string name="select_item_delete">Delete</string>
    <string name="dialog_title_delete">Delete</string>
    <string name="dialog_delete_mesage">Deleting a linked photo?</string>
    <string name="about">About</string>
    <string name="detail_title">Detailed description</string>
    <string name="short_title">Brief description</string>
    <string name="NameJobList">To-do list title</string>
    <string name="name_job">Task name</string>

</resources>
