<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="8dp"
              android:paddingRight="8dp"
              android:layout_margin="@dimen/spacing_size_16"
    >
    <LinearLayout
        android:id="@+id/edit_laout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/small_size_8">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_create_black_24dp"
            android:layout_margin="@dimen/small_size_8"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_item_edit"
            android:layout_marginTop="12dp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:background="@color/depp_purple_dark"/>
    <LinearLayout
        android:id="@+id/send_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_email_black_24dp"
            android:layout_margin="@dimen/small_size_8"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_item_send_email"
            android:layout_marginTop="12dp"/>
    </LinearLayout>
    <View
        android:id="@+id/send_mail_vb"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:background="@color/depp_purple_dark"/>
    <LinearLayout
        android:id="@+id/del_laout"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_delete_black_24dp"
            android:layout_margin="@dimen/small_size_8"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_item_delete"
            android:layout_marginTop="12dp"/>
    </LinearLayout>

</LinearLayout>