<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Краткое описание -->
    <TextView
        android:id="@+id/short_text_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/short_title"
        android:hint="Описание заметки"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/activity_vertical_margin" />

    <EditText
        android:id="@+id/short_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/short_text_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/small_size_8" />

    <!-- RecyclerView с фото -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/photos_lv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxHeight="68dp"
        app:layout_constraintTop_toBottomOf="@id/short_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/small_size_8"
        tools:listitem="@layout/photo_item" />

    <!-- Детальное описание -->
    <TextView
        android:id="@+id/long_text_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/detail_title"
        app:layout_constraintTop_toBottomOf="@id/photos_lv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/small_size_8" />

    <!-- Многострочный EditText — растягивается до кнопки -->
    <EditText
        android:id="@+id/long_et"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:inputType="textMultiLine"
        android:gravity="top|start"
        android:scrollbars="vertical"
        android:autoLink="all"
        android:linksClickable="true"
        android:textColorLink="@color/depp_purple_dark"
        android:overScrollMode="always"
        android:isScrollContainer="true"
        android:nestedScrollingEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/long_text_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/save_item_button"
        android:layout_marginTop="@dimen/small_size_8"
        android:layout_marginBottom="@dimen/small_size_8" />

    <!-- Кнопка "Сохранить" — всегда прижата к низу -->
    <Button
        android:id="@+id/save_item_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save_button_txt"
        android:background="@drawable/rounded_button_color"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/small_size_8" />

</androidx.constraintlayout.widget.ConstraintLayout>